Tue Apr 20 10:27:16 2004  Matt Rice <ratmice@yahoo.com>

	* target.make: Use the GNU/Linux ELF code for GNU/Hurd too.

2004-04-12  Adam Fedor  <fedor@gnu.org>

	* common.make (GNUSTEP_FRAMEWORKS_FLAGS): Add missing close paren.

	* clean_os.sh: Add netbsd1.6Z

	* Documentation/GNUmakefile (GNUSTEP_TEXI2HTML_FLAGS): Add.
	* Documentation/gnustep.init: Some updates.
	* Documentation/announce.texi: Fix bug url.
	* Documentation/gnustep-howto.texi: Add more dependancy explanations.
	* Documentation/machines.texi: Add FreeBSD 5.x.
	

2004-04-02  David Ayers  <d.ayers@inode.at>

	* GNUstep-reset.sh: Unset DYLD_LIBRARY_PATH and	
	DYLD_FRAMEWORK_PATH.
	* common.make: Mark as makefile for emacs.  Add support for
	setting GNUSTEP_FRAMEWORKS_DIRS and GNUSTEP_FRAMEWORKS_FLAGS 
	for apple-apple-apple.
	* ld_lib_path.(c)sh: Set DYLD_FRAMEWORK_PATH for
	apple-apple-apple.
	* rules.make: Added support for GNUSTEP_FRAMEWORKS_FLAGS.
	
Wed Mar 31 11:46:03 2004  Nicola Pero <n.pero@mi.flashnet.it>

	* Instance/bundle.make: Use ALL_LDFLAGS when running DLLWRAP on
	windows.
	* Instance/framework.make: Similar change.
	* Instance/palette.make: Similar change.

Wed Mar 31 11:44:21 2004  Willem Rein Oudshoorn <woudshoo@xs4all.nl>
	
	* Instance/library.make: Use ALL_LDFLAGS when running DLLWRAP on
	windows.

2004-03-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/Documentation/autogsdoc.make: Make doc subdirectory if
	necessary.

2004-03-31 Richard Frith-Macdonald <rfm@gnu.org>

	* jni.make: Add support for MacOS-X ... use the java 1.3.1 headers
	fromt the JavaVM framework.

Tue Mar 30 02:44:21 2004  Nicola Pero <n.pero@mi.flashnet.it>
	
	* Documentation/filesystem.texi: Clarify the differences between
	the Local domain and System domain, clearly state that the default
	installation directory of software should be the Local domain, and
	mention that the Network domain is now optional and disabled by
	default.  Other minor clarifications and tidyups.
